added additional files for assessing effect of different weight transformations

--- a/tactical_analyses/01.1.ALT_tactical-toa-scores.Rmd
+++ b/tactical_analyses/01.1.ALT_tactical-toa-scores.Rmd
@@ -128,6 +128,11 @@ names(class.df)[1:5] <- c("Locus.ID","adipose","islet","liver","muscle")
 
 ```
 
+```{r}
+
+write.table(class.df,file.dir%&%"classified-loci_weighted_with-shared_ALT.txt",sep="\t",quote=F,row.names=F)
+
+```
 
 
 
