--- a/tactical_analyses/revisions/reviewer_1/R1.1.1_eQTL-enrich_make-input-files.Rmd
+++ b/tactical_analyses/revisions/reviewer_1/R1.1.1_eQTL-enrich_make-input-files.Rmd
@@ -17,10 +17,10 @@ library("tidyverse")
 library("data.table")
 library("Homo.sapiens")
 
-serv.dir1 <- "/home/jason/science/servers/FUSE/" 
-serv.dir2 <- "/home/jason/science/servers/FUSE5/" 
+serv.dir1 <- "/Users/jasont/science/servers/FUSE/" 
+serv.dir2 <- "/Users/jasont/science/servers/FUSE5/" 
 proj.dir <- serv.dir2 %&% "projects/t2d_classification/"
-work.dir <- proj.dir %&% "tactical_analyses/"
+work.dir <- proj.dir %&% "tactical_analyses/revisions/reviewer_1/"
 gtex.dir <- serv.dir2 %&% "datasets/GTEx/v7/eqtl/GTEx_Analysis_v7_eQTL/"
 out.dir <- work.dir %&% "enrichment_files/eqtls/"
 
@@ -47,14 +47,21 @@ mus.eqtls <- map(1:length(mus.df$variant_id),function(i){
   id <- vec[[1]][1] %&% ":" %&% vec[[1]][2]
 }) %>% as.character(.) %>% unique(.)
 
-adi.df <- fread("cat " %&% gtex.dir %&% "Adipose_Subcutaneous.v7.signif_variant_gene_pairs.txt.gz" %&% " | zmore")
-pb <- txtProgressBar(min=0,max=dim(adi.df)[1],style=3)
-adi.eqtls <- map(1:length(adi.df$variant_id),function(i){
+adi.sub.df <- fread("cat " %&% gtex.dir %&% "Adipose_Subcutaneous.v7.signif_variant_gene_pairs.txt.gz" %&% " | zmore")
+pb <- txtProgressBar(min=0,max=dim(adi.sub.df)[1],style=3)
+adi.sub.eqtls <- map(1:length(adi.sub.df$variant_id),function(i){
   setTxtProgressBar(pb,i)
-  vec <- adi.df$variant_id[i] %>% strsplit(.,split="_")
+  vec <- adi.sub.df$variant_id[i] %>% strsplit(.,split="_")
   id <- vec[[1]][1] %&% ":" %&% vec[[1]][2]
 }) %>% as.character(.) %>% unique(.)
 
+adi.visc.df <- fread("cat " %&% gtex.dir %&% "Adipose_Visceral_Omentum.v7.signif_variant_gene_pairs.txt.gz" %&% " | zmore")
+pb <- txtProgressBar(min=0,max=dim(adi.visc.df)[1],style=3)
+adi.visc.eqtls <- map(1:length(adi.visc.df$variant_id),function(i){
+  setTxtProgressBar(pb,i)
+  vec <- adi.visc.df$variant_id[i] %>% strsplit(.,split="_")
+  id <- vec[[1]][1] %&% ":" %&% vec[[1]][2]
+}) %>% as.character(.) %>% unique(.)
 
 ```
 
@@ -102,8 +109,7 @@ fastqtl.eqtls <- map(1:dim(fastqtl.df)[1],function(i){
 
 ```{r}
 
-islet.eqtls  <- c(insp.exon.eqtls,insp.gene.eqtls,mvdb.eqtls) %>% unique(.)
-islet.jmt.eqtls <- fastqtl.eqtls
+islet.eqtls  <-  fastqtl.eqtls
 
 ```
 
@@ -111,14 +117,13 @@ Save tissue-specific eQTL sets
 
 ```{r}
 
-isl.spec <- islet.eqtls[!(islet.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
-isl.jmt.spec <- islet.jmt.eqtls[!(islet.jmt.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
-mus.spec <- mus.eqtls[!(mus.eqtls %in% c(islet.eqtls,liv.eqtls,adi.eqtls))]
-adi.spec <- adi.eqtls[!(adi.eqtls %in% c(islet.eqtls,liv.eqtls,mus.eqtls))]
-liv.spec <- liv.eqtls[!(liv.eqtls %in% c(islet.eqtls,adi.eqtls,mus.eqtls))]
-insp.exon.spec <- insp.exon.eqtls[!(insp.exon.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
-insp.gene.spec <- insp.gene.eqtls[!(insp.gene.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
-mvdb.spec <- mvdb.eqtls[!(mvdb.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
+adi.union.eqtls <- c(adi.sub.eqtls,adi.visc.eqtls) %>% unique(.)
+isl.spec <- islet.eqtls[!(islet.eqtls %in% c(mus.eqtls,liv.eqtls,adi.union.eqtls))]
+mus.spec <- mus.eqtls[!(mus.eqtls %in% c(islet.eqtls,liv.eqtls,adi.union.eqtls))]
+liv.spec <- liv.eqtls[!(liv.eqtls %in% c(islet.eqtls,adi.union.eqtls,mus.eqtls))]
+adi.union.spec <- adi.union.eqtls[!(adi.union.eqtls %in% c(islet.eqtls,liv.eqtls,mus.eqtls))]
+adi.visc.spec <- adi.visc.eqtls[!(adi.visc.eqtls %in% c(islet.eqtls,liv.eqtls,mus.eqtls,adi.sub.eqtls))]
+adi.sub.spec <- adi.sub.eqtls[!(adi.sub.eqtls %in% c(islet.eqtls,liv.eqtls,mus.eqtls,adi.visc.eqtls))]
 
 ```
 
@@ -127,37 +132,14 @@ mvdb.spec <- mvdb.eqtls[!(mvdb.eqtls %in% c(mus.eqtls,liv.eqtls,adi.eqtls))]
 
 write.table(x=isl.spec,file=out.dir %&% "islet-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
 write.table(x=mus.spec,file=out.dir %&% "muscle-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
-write.table(x=adi.spec,file=out.dir %&% "adipose-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
+write.table(x=adi.union.spec,file=out.dir %&% "adipose-union-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
+write.table(x=adi.visc.spec,file=out.dir %&% "adipose-visc-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
+write.table(x=adi.sub.spec,file=out.dir %&% "adipose-sub-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
 write.table(x=liv.spec,file=out.dir %&% "liver-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
-write.table(x=insp.exon.spec,file=out.dir %&%
-              "inspExon-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
-write.table(x=insp.gene.spec,file=out.dir %&%
-              "inspGene-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
-write.table(x=mvdb.spec,file=out.dir %&%
-              "mvdbExon-specific-esnps.txt",sep="\t",quote=F,row.names=F,col.names=F)
-write.table(x=isl.jmt.spec,file=out.dir %&% "islet-specific-esnps_jmt.txt",sep="\t",quote=F,row.names=F,col.names=F)
+
 
 
 ```
 
-
-# Generate TOA set input file for SNPSNAP  (Accession Aug 21, 2019)
-
-```{r}
-
-toa.df <- fread(work.dir %&% "analysis_files/classified-loci_weighted_with-shared.txt")
-cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
-
-pb <- txtProgressBar(min=0,max=dim(toa.df)[1],style=3)
-save.vec <- map(1:dim(toa.df)[1],function(i){
-  pb <- setTxtProgressBar(pb,i)
-  id <- toa.df$Locus.ID[i]
-  (filter(cred.df,CondID==id)$IndexSNP %>% unique(.) %>% strsplit(.,split="chr"))[[1]][2]
-}) %>% as.character(.)
-
-
-write.table(x=save.vec,file=out.dir %&% "snpsnap_input.txt",sep="\t",quote=F,row.names=F,col.names=F)
-
-```
 
 
